--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
 </head>
 <body class="min-h-screen bg-gray-100 text-gray-900 font-sans">
-    <!-- Navbar -->
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand text-green-900 text-3xl font-bold" href="#">
-            <img src="c:\Users\Shruti\Downloads\logo.png" alt="Logo"
+            <img src="./images/logo.png" alt="Logo"
                 class="logo d-inline-block align-text-top me-2">
         </a>
 
@@ -150,7 +149,7 @@
 
         <!-- Project List -->
         <div class="col-md-3 mb-4">
-            <a href="C:/Users/Shruti/OneDrive/Desktop/hck/urban-loft.html">
+            <a href="./projects/urban-loft.html">
             <div class="project-card">
                 <img src="./images/recentproject/rp1.jpg" alt="Urban Loft">
                 <div class="overlay">Urban Loft</div>
@@ -402,7 +401,5 @@
     <script>
         (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="o4hAgGtxHYpq7X9nWXo7t";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
         </script>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
     </body>
-
-</html>
